[tool.poetry]
name = "sparkle-hypothesis"
version = "1.3.1"
description = "Use the power of hypothesis property based testing in PySpark tests"
authors = ["Machiel Keizer Groeneveld <machielg@gmail.com>"]
license = "GPL-3.0-or-later"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Environment :: Console",
    "Programming Language :: Python :: 3.7",
    "Topic :: Software Development :: Testing"
]
readme = "README.md"
repository = "https://github.com/machielg/sparkle-hypothesis/"

[tool.poetry.dependencies]
python = ">=3.6,<4"
hypothesis = "^5.35.3"
sparkle-test = "^1.1.0"
sparkle-session = "^1.2.1"

[tool.poetry.dev-dependencies]
pyspark = "2.4.4"
pytest = "^6.0.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
